--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,14 +42,14 @@ services:
       - GRAYLOG_PASSWORD_SECRET=somepasswordpepper
       # Password: admin
       - GRAYLOG_ROOT_PASSWORD_SHA2=8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
-      - GRAYLOG_HTTP_EXTERNAL_URI=http://127.0.0.1:9000/
+      - GRAYLOG_HTTP_EXTERNAL_URI=http://127.0.0.1:9000/ #trocar pelo ip do host que irar hospedar o docker
     links:
       - mongodb:mongo
       - elasticsearch
     depends_on:
       - mongodb
       - elasticsearch
-    ports:
+    ports: #declarar todas as portas utilizadas.
       # Graylog web interface and REST API
       - 9000:9000
       # Syslog TCP
@@ -60,6 +60,8 @@ services:
       - 12201:12201
       # GELF UDP
       - 12201:12201/udp
+      # SW-Syslog2_UDP
+      - 514:514
 # Volumes for persisting data, see https://docs.docker.com/engine/admin/volumes/volumes/
 volumes:
   mongo_data:
