--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,7 @@ services:
       # GELF UDP
       - 12201:12201/udp
       # SW-Syslog2_UDP
-      - 514:514
+      - 514:514/udp
 # Volumes for persisting data, see https://docs.docker.com/engine/admin/volumes/volumes/
 volumes:
   mongo_data:
